--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Living Words</title>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Paytone+One&amp;display=swap'><link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <div class=container>
 	<div class=content style=display:block;width:1000px;height:562px>
 		<div class=container-full>
@@ -25,3 +35,8 @@
 		</div>
 	</div>
 </div>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
+</html>
